<package format="2">
  <name>demo_pub</name>
  <version>0.0.0</version>
  <description>The demo_pub package</description>

  <maintainer email="you@yourdomain.tld">Your Name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <export>
  </export>
</package>

